--- a/index.html
+++ b/index.html
@@ -170,10 +170,17 @@
         Plugins: For first slide, set the autoplay time to a custom 10 seconds.
 
     -->
+   
+    <!--
+
+
+Edit HEre
     <div id="bored" class="step slide" slide.color = "rgb(239,83,80)" data-x="-1000" data-y="-1500" data-autoplay="10">
         <q>Binoy<br>
         Karunarathne</q>
     </div>
+
+     -->
 
     <!--
 
@@ -189,7 +196,10 @@
         Please note, that while `#/step-2` (with slash) would also work in a link it's not recommended.
         Using classic `id`-based links like `#step-2` makes these links usable also in fallback mode.
 
-    -->
+    
+
+
+<!--
     <div class="step slide" data-x="0" data-y="-1500">
         <q>جوبیلنت به صورت <strong>jubilant</strong> نوشته می شه و به<strong>جالب</strong> است.</q>
     </div>
@@ -197,6 +207,8 @@
     <div class="step slide" data-x="1000" data-y="-1500">
         <q>Would you like to <strong>impress your audience</strong> with <strong>stunning visualization</strong> of your talk?</q>
     </div>
+
+-->
 
     <!--
 
